# study

./: .dockerignore  .env  .gitattributes  .gitignore  .last_update  CLAUDE.md  CONSOLIDATION_SUMMARY.md  DEPLOYMENT_URL.md  Dockerfile  README.md  SETUP.md  a.py  automation.oneliners  docker-compose.yml  install-deps.bat  kill_all_db_connections.sh  kill_db_connections.py  next.config.js  package-lock.json  package.json  run-all.ps1  start-dev.bat  start-dev.ps1  tailwind.config.js  tovrun.bat  tovrun.ps1
.claude/: CICD_HISTORY.md  DATABASE_HISTORY.md  DATABASE_PROTECTION_COMPLETE_DEC11_2025.md  DB_PROTECTION_QUICK_REFERENCE.md  DEBLOAT_COMPLETE_DEC15_2025.md  DEPLOYMENT_LOGGING_PLATFORM.md  DEVOPS_COMPLETE_PACKAGE.md  DEVOPS_EMERGENCY_RECOVERY_PLAN.md  DEVOPS_QUICK_REFERENCE.txt  DIAGNOSTIC_PROCEDURES.md  DOCKER_ARCHITECTURE.md  EMERGENCY_DATABASE_RESTORATION_COMPLETE_DEC10_2025.md  EMERGENCY_RECOVERY_PLAYBOOK.md  EXTERNAL_DATABASE_RECOVERY_PROTOCOL.md  GITHUB_SECRETS_SETUP.md  GIT_COMMIT_PLAN.md  INDEX.md  INDEX_DECEMBER_2025.md  INFRASTRUCTURE_MONITORING_PHASE1_COMPLETE_DEC12_2025.md  LOGGING_PLATFORM_ARCHITECTURE.md  LOGGING_PLATFORM_COMPLETE_DEC15_2025.md  LOGGING_PLATFORM_DEPLOYED.md  MONITORING_SYSTEM_COMPLETE_DEC9_2025.md  PERMANENT_FIXES_PLAN_DEC15.md  PROJECT_STATUS.md  PROTECTION_GUIDE.md  QUICK_REFERENCE_DEC9.md  README_DB_PROTECTION.txt  REMAINING_SCRIPTS_PLAN.md  SYNC_SETUP.md  learned.md  (+8 more)
Dev_Toolchain/programming/.NET/projects/c++/Wallpapers/a/: CMakeLists.txt  build.bat  compile.ps1  test_download.cpp  wallpaper_changer.cpp  wallpaper_debug.cpp
(+13574 files in other folders)
